# RobotC

./: .gitignore  README.md  includes.txt  libs.txt  test_camera.cpp
Data/: depth_calibration.yaml
Doc/: api_protocol.md  pico_spec.md  protocol.md  raspberrypi-swd.cfg  raspi_spec.md  spec.md  state_machine.md
RobotBody/: CMakeLists.txt
RobotBody/include/communication/: uart_handler.h
RobotBody/include/imu/: mpu6886.h
RobotBody/include/motor/: motor_driver.h
RobotBody/src/: main.cpp  test_uart.cpp
RobotBody/src/communication/: uart_handler.cpp
RobotBody/src/imu/: mpu6886.cpp
RobotBody/src/motor/: motor_driver.cpp
RobotHead/: CMakeLists.txt  Makefile  README.md
RobotHead/include/audio/: audio_player.h  voice_detector.h
RobotHead/include/camera/: libcamera_capture.h
RobotHead/include/detection/: object_detector.h
RobotHead/include/hardware/: led_controller.h  uart_pico.h
RobotHead/include/network/: http_streamer.h  mqtt_client.h
RobotHead/include/platform/: i2c_dev.h  platform.h  platform_wrapper.h
RobotHead/include/sensors/: vl53l8cx.h  vl53l8cx_api.h
RobotHead/src/: imu_calibration.py  main.cpp
RobotHead/src/audio/: audio_player.cpp  voice_detector.cpp
RobotHead/src/camera/: libcamera_capture.cpp
RobotHead/src/detection/: object_detector.cpp
RobotHead/src/hardware/: led_controller.cpp  uart_pico.cpp
RobotHead/src/network/: http_streamer.cpp  mqtt_client.cpp
RobotHead/src/platform/: i2c_dev.cpp  platform_wrapper.cpp
RobotHead/src/sensors/: vl53l8cx.cpp
Tool/: CMakeLists.txt  calibrate_depth.cpp  camera_calibration_web.cpp  depth_calibration_web.cpp  uart_body_test.cpp
doc/: spec.md
scripts/: .env.example  .gitignore  build_body.sh  build_tools.sh  camera_server.py  check_camera.sh  deploy_body.sh  deploy_head.sh  deploy_tools.sh  export_yolov8_int8.py  test_camera.cpp  test_libcamera.cpp
